# ml-2012

./: .gitignore  README.md
andrei.eremeev/result/: logitmodel.txt  perceptron.txt
arkady.rost/: build.sbt  images.sh  labels.sh
arkady.rost/project/: Build.scala
arkady.rost/src/main/scala/: Test.scala
data/mnist/: README.md  README.md~
dmitry.karpov/Perceptron/: ImageReader.py  check.py  check.py~  main.py~  teta.out  train.py  train.py~
eugene.luckyanets/Percepthron/: main.py  percepthron.py  perceptron.py
eugene.luckyanets/Reader/: exceptions.py  reader.py
ioann.volkov/: CMakeLists.txt  images_holder.cpp  images_holder.h  lab1.cpp  lab1_results.txt
irina.petrova/: build.sbt
lib/: README.md
oleg.larionov/src/logit/: CheckLogit.java  Derivative.java  Gradient.java  Logit.java  LogitRegr.java  Runner.java
oleg.larionov/src/neural/: Network.java  NeuralMain.java
oleg.larionov/src/perc/: CheckLinear.java  PercGen.java
oleg.larionov/src/svm/: CheckSVM.java  Func.java  Gaussian.java  GridSearch.java  InhomoPoly.java  Kernel.java  Kernels.java  Runner.java  SVM.java  Scalar.java
oleg.mamin/: LinearPerceptron.java  LogisticRegression.java  LogisticTester.java  Main.java  Reader.java  Tester.java
vitaly.aksenov/HW01/: error  learn  result
vitaly.aksenov/HW01/src/: Image.java  Learning.java  Perceptron.java  Reader.java
vitaly.aksenov/HW02/: error  learn  result
vitaly.aksenov/HW02/src/: Learning.java  Regression.java
vladislav.kononov/src/kononov/gradient/: Gradient.java  Main.java  Teacher.java  WeightFunction.java
(+35 files in other folders)
